Maybe fixed cast on mobile

--- a/castMobile.css
+++ b/castMobile.css
@@ -43,7 +43,7 @@ h2 {
     main ul li {
         display: block;
         overflow-wrap: break-word;
-        margin: 1100px auto;
+        margin: 1500px auto;
         font-size: 25px;
         scale: 3.75;
     }
